[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/creature.png" type="Texture" id=1]
[ext_resource path="res://actors/creature.gd" type="Script" id=2]
[ext_resource path="res://actions/tile_mover.gd" type="Script" id=3]
[ext_resource path="res://actions/behaviors/wander.gd" type="Script" id=4]
[ext_resource path="res://actions/mortality.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Creature" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 0 )
texture = ExtResource( 1 )

[node name="collider_north" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 0, -8 )
collision_mask = 3
collide_with_areas = true

[node name="collider_east" type="RayCast2D" parent="."]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 8, 0 )
collision_mask = 3
collide_with_areas = true

[node name="collider_south" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 3
collide_with_areas = true

[node name="collider_west" type="RayCast2D" parent="."]
position = Vector2( -8, 0 )
enabled = true
cast_to = Vector2( -8, 0 )
collision_mask = 3
collide_with_areas = true

[node name="Tween" type="Tween" parent="."]

[node name="tile_mover" type="Node" parent="."]
script = ExtResource( 3 )

[node name="wander" type="Node" parent="."]
script = ExtResource( 4 )

[node name="mortality" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="mortality"]
